--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     </head>
     <body>
-        <nav>
-            <div class="left-list">
-                <ul>
-                    <li><a href="https://www.youtube.com/@DeemonStar/featured" target="_blank"><i class="fa-solid fa-circle" style="color: #191909;"></i> ABC LK</a></li>
-                    <li><a class="bold" href="#feed"><i class="fa-solid fa-book" style="color: #191909;"></i> Feed</a></li>
-                    <li><a class="underline" href="#categories">Categories</a></li>
-                </ul>
-            </div>            
-            <ul class="sidemenu">
-                <li><a class="underline" href="#play">Play</a></li>
-                <li><a class="underline" href="#home">Home</a></li>
-                <li><a class="bold none-underline" href="https://sashin517.github.io/DBLibrarymine/" target="_blank">Sign up</a></li>
-                <li><a class="underline" href="https://sashin517.github.io/DBLibrarymine/" target="_blank">Log in</a></li>
-            </ul>
-        </nav>
+        <header>
+            <nav>
+                <div class="left-part">
+                    <a href="https://www.youtube.com/@DeemonStar/featured" target="_blank"><i class="fa-solid fa-circle" style="color: #191909;"></i> ABC LK</a></li>
+                    <a class="bold" href="#feed"><i class="fa-solid fa-book" style="color: #191909;"></i> Feed</a></li>
+                    <a class="underline" href="#categories">Categories</a>
+                </div>                                       
+               <ul class="right-part">
+                   <li><a class="underline" href="#play">Play</a></li>
+                   <li><a class="underline" href="#home">Home</a></li>
+                   <li><a class="bold none-underline" href="https://sashin517.github.io/DBLibrarymine/" target="_blank">Sign up</a></li>
+                   <li><a class="underline" href="https://sashin517.github.io/DBLibrarymine/" target="_blank">Log in</a></li>
+               </ul>
+           </nav>
+        </header>
+
         <!--main-->
         <div id="first-section">
             <div class="left-sector">
@@ -163,11 +164,11 @@
                         <h4><i class="fa-solid fa-book-open-reader" style="color: #191609;"></i></h4>
                         <p>Knowledge</p>
                     </a>
-                    <a href ="#" class="container-2">
+                    <a href ="#" class="container-2 cn7">
                         <h4><i class="fa-solid fa-earth-asia" style="color: #191609;"></i></h4>
                         <p>Language</p>
                     </a>
-                    <a href ="#" class="container-2">
+                    <a href ="#" class="container-2 cn8">
                         <h4><i class="fa-solid fa-circle-arrow-right" style="color: #191609;"></i></h4>
                         <p>Other</p>
                     </a>
