--- a/index.html
+++ b/index.html
@@ -144,41 +144,46 @@
                 <img src="img/Earth and Moon-pana.svg" alt="Earth and Moon-pana"/>
             </div>                       
         </div>
+        <!--Catogories-->
         <div class="con-background">
             <img src="img/Cat astronaut-cuate.svg" alt=""> 
             <div class="blockk">
                 <h1>Choose<br/>Your Interest to get<br/><span class="started-text">Started!!!</span></h1>
                 <div id="cards-2">
                     <a href ="#" class="container-2 cn1">
-                        <h4><i class="fa-solid fa-square-root-variable" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-square-root-variable"></i></h4>
                         <p>Mathematics</p>
                     </a>
                     <a href ="#" class="container-2 cn2">
-                        <h4><i class="fa-solid fa-flask" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-flask" ></i></h4>
                         <p>Science</p>
                     </a>
                     <a href ="#" class="container-2 cn3">
-                        <h4><i class="fa-solid fa-masks-theater" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-masks-theater" ></i></h4>
                         <p>Drama</p>
                     </a>
-                    <a href ="#" class="container-2 cn4">
+                    <!--<a href ="#" class="container-2 cn4">
                         <h4>Hide</h4>
                         <p>hidden</p>
-                    </a>
+                    </a>-->
                     <a href ="#" class="container-2 cn5">
-                        <h4><i class="fa-solid fa-palette" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-palette" ></i></h4>
                         <p>Art & Craft</p>
                     </a>
                     <a href ="#" class="container-2 cn6">
-                        <h4><i class="fa-solid fa-book-open-reader" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-book-open-reader" ></i></h4>
                         <p>Knowledge</p>
                     </a>
                     <a href ="#" class="container-2 cn7">
-                        <h4><i class="fa-solid fa-earth-asia" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-earth-asia" ></i></h4>
                         <p>Language</p>
                     </a>
+                    <a href ="#" class="container-2 cn4">
+                        <h4><i class="fa-solid fa-earth-asia" ></i>Hide</h4>
+                        <p>hidden</p>
+                    </a>
                     <a href ="#" class="container-2 cn8">
-                        <h4><i class="fa-solid fa-circle-arrow-right" style="color: #191609;"></i></h4>
+                        <h4><i class="fa-solid fa-circle-arrow-right"></i></h4>
                         <p>Other</p>
                     </a>
                 </div>
