--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ABC LK™</title>
+        <title>Quiz Galaxy™</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
             <nav>
                 <div class="left-menu">
                     <ul class="left-part">
-                        <li><a href="https://www.youtube.com/@DeemonStar/featured" target="_blank"><i class="fa-solid fa-circle" style="color: #191909;"></i> ABC LK</a></li>
+                        <li><a href="https://www.youtube.com/@DeemonStar/featured" target="_blank"><i class="fa-solid fa-circle" style="color: #191909;"></i> QUIZ GALAXY</a></li>
                         <li><a class="bold" href="#feed"><i class="fa-solid fa-book" style="color: #191909;"></i> Feed</a></li>
                         <li><a class="underline" href="#categories">Categories</a></li>
                     </ul>
@@ -192,14 +192,14 @@
         <!--Last Section-->
         <div class="last-section">
             <div class="gradient-container">
-                <h1>ABC LK: Elevate<br/>Learning Through<br/>Play!!!</h1>
-                <p>Unleash the power of interactive learning with ABC LK, your go-to destination for engaging online quizzes that make education fun and captivating. Much like Kahoot, we're dedicated to turning every lesson into a lively game, creating an immersive and entertaining experience for learners of all ages.</p>
+                <h1>Quiz Galaxy: Elevate<br/>Learning Through<br/>Play!!!</h1>
+                <p>Unleash the power of interactive learning with <bold>Quiz Galaxy</bold>, your go-to destination for engaging online quizzes that make education fun and captivating. Much like Kahoot, we're dedicated to turning every lesson into a lively game, creating an immersive and entertaining experience for learners of all ages.</p>
             </div>
             <img src="img/Astronaut suit-pana.svg" alt="Astronaut suit-pana">
         </div>        
         <!--Last Section-->          
         <div id="copyright">
-                <p> Copyright © 2023 ALPHA Group. Made with <i class="fa-solid fa-heart" style="color: #ff29a6;"></i> by ABC LK™</p>
+                <p> Copyright © 2023 ALPHA Group. Made with <i class="fa-solid fa-heart" style="color: #ff29a6;"></i> by Quiz Galaxy™</p>
                 <div class="icons2">
                     <a href="#" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://www.facebook.com/sashin.deemantha/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
