--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
             </div>                       
         </div>
         <!--Last Section-->
+         <!--<div class="blob-container">
+            <div class="blob blob1"></div>
+        </div>-->
         <div class="last-section">
             <div class="gradient-container">
                 <h1>Quiz Galaxy: Elevate<br/>Learning Through<br/>Play!!!</h1>
@@ -197,7 +200,8 @@
             </div>
             <img src="img/Astronaut suit-pana.svg" alt="Astronaut suit-pana">
         </div>        
-        <!--Last Section-->          
+        <!--Last Section-->
+                  
         <div id="copyright">
                 <p> Copyright © 2023 ALPHA Group. Made with <i class="fa-solid fa-heart" style="color: #ff29a6;"></i> by Quiz Galaxy™</p>
                 <div class="icons2">
