--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a class="underline" href="#home">Home</a></li>
                         <li><a class="bold none-underline" href="https://sashin517.github.io/DBLibrarymine/"
                                 target="_blank">Sign up</a></li>
-                        <li><a class="underline" href="https://sashin517.github.io/DBLibrarymine/" target="_blank">Log in <i
+                        <li><a class="underline" href="https://sashin517.github.io/Quiz-Galaxy-Log-In/" target="_blank">Log in <i
                                     class="fa-solid fa-right-to-bracket" style="color: #191609;"></i></a></li>
                     </ul>
                 </div>
