--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul class="right-part">
                         <li><a class="underline" href="#play">Play</a></li>
                         <li><a class="underline" href="#home">Home</a></li>
-                        <li><a class="bold none-underline" href="https://sashin517.github.io/DBLibrarymine/"
+                        <li><a class="bold none-underline" href="https://sashin517.github.io/Quiz-Galaxy-Sign-Up/"
                                 target="_blank">Sign up</a></li>
                         <li><a class="underline" href="https://sashin517.github.io/Quiz-Galaxy-Log-In/" target="_blank">Log in <i
                                     class="fa-solid fa-right-to-bracket" style="color: #191609;"></i></a></li>
